fix bug collapse box-shadow

--- a/src/components/Collapse/styles/collapse.less
+++ b/src/components/Collapse/styles/collapse.less
@@ -3,9 +3,9 @@
     border-top: 0 !important;
     border-radius: 0 !important;
   }
-  :global(.ant-collapse-item-active) {
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-  }
+  // :global(.ant-collapse-item-active) {
+  //   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  // }
 }
 .customHeaderCollapse {
   border-bottom: 0 !important;
